Fixed spacing and changed landing page

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,3 +14,6 @@
  *= require_tree .
  *= require_self
  */
+ h1 {
+  padding-top: 20px;
+}
